[gd_scene load_steps=7 format=3 uid="uid://6tvi0h603au0"]

[ext_resource type="Script" path="res://Weapons/Glock/pistol.gd" id="1_i28cd"]
[ext_resource type="Texture2D" uid="uid://jnyy86i026x7" path="res://Weapons/Glock/glock_17_1.png" id="2_ormr1"]
[ext_resource type="Texture2D" uid="uid://pwp2kkkoy03w" path="res://Characteres/Null_C/images/arm.png" id="3_tgx6l"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8euar"]
a = Vector2(8, 33)
b = Vector2(-8, 33)

[sub_resource type="Animation" id="Animation_jte3w"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.0117383, 0.559142, 0.559142, -0.0117383]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43qne"]
_data = {
"reload": SubResource("Animation_jte3w")
}

[node name="Pistol" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_i28cd")

[node name="Marker2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-24, -32)
rotation = -0.0117383

[node name="Glock17" type="Sprite2D" parent="Marker2D"]
position = Vector2(45.0204, -1.47165)
rotation = -3.12985
scale = Vector2(0.065, -0.058)
texture = ExtResource("2_ormr1")

[node name="Arm" type="Sprite2D" parent="Marker2D"]
position = Vector2(19.9751, 2.23462)
rotation = -1.55906
scale = Vector2(0.104226, 0.112086)
texture = ExtResource("3_tgx6l")

[node name="ShootingPoint" type="Marker2D" parent="Marker2D"]
unique_name_in_owner = true
position = Vector2(63.1248, -10.2597)
rotation = 0.0056614

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-24, -32)
shape = SubResource("SegmentShape2D_8euar")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_43qne")
}

[node name="Reload_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="Reload_timer" to="." method="_on_reload_timer_timeout"]
